--- a/srcs/.env
+++ b/srcs/.env
@@ -8,7 +8,7 @@ MYSQL_USER=wpuser
 MYSQL_PASSWORD=wppassword123
 
 # WordPress Configuration
-WP_ADMIN_USER=wpadmin
+WP_ADMIN_USER=superuser
 WP_ADMIN_PASSWORD=adminpass123
 WP_ADMIN_EMAIL=admin@geonwkim.42.fr
 WP_USER=wpuser2
@@ -16,4 +16,4 @@ WP_USER_PASSWORD=userpass123
 WP_USER_EMAIL=user@geonwkim.42.fr
 
 # Paths
-DATA_PATH=/home/geonwkim/data
+DATA_PATH=./data
