--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,22 +3,24 @@ services:
     build:
       context: ./requirements/nginx
       dockerfile: Dockerfile
+    image: nginx
     container_name: nginx
     ports:
       - "443:443"
     volumes:
       - ./requirements/nginx/conf/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./requirements/wordpress:/var/www/html/wordpress
+      - wordpress_data:/var/www/html/wordpress
     depends_on:
       - wordpress
       - mariadb
     networks:
-      - inception
+      - docker-network
 
   wordpress:
     build:
       context: ./requirements/wordpress
       dockerfile: Dockerfile
+    image: wordpress
     container_name: wordpress
     volumes:
       - wordpress_data:/var/www/html/wordpress
@@ -27,15 +29,22 @@ services:
       - WORDPRESS_DB_NAME=${MYSQL_DATABASE}
       - WORDPRESS_DB_USER=${MYSQL_USER}
       - WORDPRESS_DB_PASSWORD=${MYSQL_PASSWORD}
+      - WP_ADMIN_USER=${WP_ADMIN_USER}
+      - WP_ADMIN_PASSWORD=${WP_ADMIN_PASSWORD}
+      - WP_ADMIN_EMAIL=${WP_ADMIN_EMAIL}
+      - WP_USER=${WP_USER}
+      - WP_USER_PASSWORD=${WP_USER_PASSWORD}
+      - WP_USER_EMAIL=${WP_USER_EMAIL}
     depends_on:
       - mariadb
     networks:
-      - inception
+      - docker-network
 
   mariadb:
     build:
       context: ./requirements/mariadb
       dockerfile: Dockerfile
+    image: mariadb
     container_name: mariadb
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
@@ -46,7 +55,7 @@ services:
       - mariadb_data:/var/lib/mysql
       - ./requirements/mariadb/conf:/etc/mysql/conf.d
     networks:
-      - inception
+      - docker-network
 
 volumes:
   mariadb_data:
@@ -63,5 +72,6 @@ volumes:
       device: ${DATA_PATH}/wordpress
 
 networks:
-  inception:
+  docker-network:
+    name: docker-network
     driver: bridge
